Fixed loading icon issue on mobile

--- a/app/assets/styles/modules/_load.css
+++ b/app/assets/styles/modules/_load.css
@@ -10,6 +10,7 @@
     transition: all 0.5s linear;
     width: 100%;
     z-index: 999;
+
 }
 
 #load__animation {
@@ -19,13 +20,18 @@
     border-top: 2px solid rgba(255, 78, 49, 1);
     bottom: 50%;
     height: 4rem;
-    left: 47%;
+    left: 42%;
     position: fixed;
     right: 50%;
-    top: 45%;
+    top: 40%;
     transition: all 0.2s linear;
     width: 4rem;
     z-index: 1000;
+
+    @mixin atSmall {
+      left: 47%;
+      top: 45%;
+    }
   }
 
   .loaded {
